# mythograph-atelier

./: .gitattributes  .gitignore  DEVELOPMENT.md  PROJECT_PLAN.md  README.md  app.py  modal_vllm_nemotron.py  pyproject.toml  requirements-image.txt  requirements-llamacpp.txt  requirements.txt
data/: example_traces.jsonl  waiting_gallery.json
mythograph/: config.py
mythograph/models/: image_client.py  llm_client.py
mythograph/prompts/: art_recipe_system.txt  conversation_director_system.txt  interviewer_system.txt
mythograph/schemas/: __init__.py  art_recipe.py  profile.py  trace.py  ui.py
mythograph/services/: art_recipe.py  conversation.py  generation.py  image_prompting.py  interview.py  starters.py  trace_logger.py
mythograph/ui/: blocks.py  examples.py  styles.css  waiting_gallery.py
scripts/: run_dev_server.py  smoke_conversation_flow.py  smoke_conversation_history.py  smoke_conversation_starters.py  smoke_image_config.py  smoke_image_prompting.py  smoke_llamacpp_config.py  smoke_llm_auth_config.py  smoke_model_assisted_conversation.py  smoke_model_paths.py  validate_traces.py
