[project]
name = "mythograph-atelier"
version = "0.1.0"
description = "A Gradio app that creates abstract art with a personal myth behind it."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "gradio>=5.0,<6.0",
  "huggingface-hub>=0.34.0",
  "llama-cpp-python>=0.3.16",
  "numpy>=1.26",
  "pillow>=10.0",
  "pydantic>=2.7",
  "spaces>=0.40.0",
]

[tool.uv.sources]
llama-cpp-python = { index = "llama-cpp-cpu" }

[tool.uv]
package = false

[[tool.uv.index]]
name = "llama-cpp-cpu"
url = "https://abetlen.github.io/llama-cpp-python/whl/cu124"
explicit = true
